Adding timeline feature
it is not straight vertical

--- a/historypage.html
+++ b/historypage.html
@@ -64,7 +64,7 @@
         </div>
 
         <!-- TIMELINE SECTION -->
-<section class="timeline-section">
+<!-- <section class="timeline-section">
     <h2 class="timeline-title">TIMELINE</h2>
     <p class="timeline-intro">An insight into the incredible experience in the world</p>
 
@@ -85,11 +85,69 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </div>
-</section>
+</section> -->
 
+<div class="timeline">
+    <div class="checkpoint">
+        <div>
+            <h2>fjdhfkjdhsjfhdj</h2>
+            <p>jdsfhskudhfdsjhfkjhfjs
+                fhsdjfhjkdshfkjhdsfkhdfh
+                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
+                fsdjfhskhfsdjfkldj
+            </p>
+        </div>
+    </div>
+
+        <div class="checkpoint">
+        <div>
+            <h2>fjdhfkjdhsjfhdj</h2>
+            <p>jdsfhskudhfdsjhfkjhfjs
+                fhsdjfhjkdshfkjhdsfkhdfh
+                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
+                fsdjfhskhfsdjfkldj
+            </p>
+        </div>
+    </div>
+
+        <div class="checkpoint">
+        <div>
+            <h2>fjdhfkjdhsjfhdj</h2>
+            <p>jdsfhskudhfdsjhfkjhfjs
+                fhsdjfhjkdshfkjhdsfkhdfh
+                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
+                fsdjfhskhfsdjfkldj
+            </p>
+        </div>
+    </div>
+
+        <div class="checkpoint">
+        <div>
+            <h2>fjdhfkjdhsjfhdj</h2>
+            <p>jdsfhskudhfdsjhfkjhfjs
+                fhsdjfhjkdshfkjhdsfkhdfh
+                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
+                fsdjfhskhfsdjfkldj
+            </p>
+        </div>
+    </div>
+
+        <div class="checkpoint">
+        <div>
+            <h2>fjdhfkjdhsjfhdj</h2>
+            <p>jdsfhskudhfdsjhfkjhfjs
+                fhsdjfhjkdshfkjhdsfkhdfh
+                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
+                fsdjfhskhfsdjfkldj
+            </p>
+        </div>
+    </div>
+
+
+</div>
 
 <!-- GEOGRAPHY SECTION -->
-<section class="geography-section">
+<!-- <section class="geography-section">
     <h2 class="geography-title">GEOGRAPHY</h2>
     <div class="geography-content">
         <div class="map-container">
@@ -100,17 +158,20 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquet lorem et ligula vestibulum, sed dictum odio aliquam.</p>
         </div>
     </div>
-</section>
+</section> -->
 
 
 <!-- PARAGRAPH TEXT BLOCKS -->
-<section class="text-blocks-section">
+<!-- <section class="text-blocks-section">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et tincidunt orci, vel fermentum nibh. Donec sit amet velit lorem.</p>
     <p>Quisque eget orci at sapien efficitur bibendum non vitae ex. Nullam fringilla, leo ut mattis posuere, metus odio placerat enim.</p>
     <p>Aliquam erat volutpat. Fusce fringilla dolor vel odio efficitur dignissim. Sed semper convallis nulla nec laoreet.</p>
     <p>Nunc congue metus in sem sagittis accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
     <p>Donec tincidunt, magna sed vestibulum iaculis, eros diam commodo nulla, et hendrerit elit felis eget arcu.</p>
-</section>
+</section> -->
+
+
+
 
         <footer data-aos="fade-up" data-aos-duration="3000">
             <div class="footer-overlay">
@@ -169,16 +230,6 @@
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
-  </script>
-
-  <script>
-    function openSearch(){
-      document.getElementById("SearchOverlay").style.display="block";
-    }
-
-    function closeSearch(){
-      document.getElementById("SearchOverlay").style.display="none";
-    }
   </script>
 
  <!-- Link custom script -->
