Context Added for timeline section

--- a/historypage.html
+++ b/historypage.html
@@ -93,55 +93,40 @@
 
     <div class="checkpoint">
         <div>
-            <h2>fjdhfkjdhsjfhdj</h2>
-            <p>jdsfhskudhfdsjhfkjhfjs
-                fhsdjfhjkdshfkjhdsfkhdfh
-                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
-                fsdjfhskhfsdjfkldj
+            <h2>9th Century CE</h2>
+            <p>Bagan was founded and grew into the first Burmese dynasty by King Anawrahta. 
             </p>
         </div>
     </div>
 
         <div class="checkpoint">
         <div>
-            <h2>fjdhfkjdhsjfhdj</h2>
-            <p>jdsfhskudhfdsjhfkjhfjs
-                fhsdjfhjkdshfkjhdsfkhdfh
-                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
-                fsdjfhskhfsdjfkldj
+            <h2>1044-1077</h2>
+            <p> King Anawrahta consolidated Myanmar in trade and Theravada Buddhism.
             </p>
         </div>
     </div>
 
         <div class="checkpoint">
         <div>
-            <h2>fjdhfkjdhsjfhdj</h2>
-            <p>jdsfhskudhfdsjhfkjhfjs
-                fhsdjfhjkdshfkjhdsfkhdfh
-                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
-                fsdjfhskhfsdjfkldj
+            <h2>1084-1112</h2>
+            <p>King Kyanzittha expanded Bagan influence and temple Buildings.
             </p>
         </div>
     </div>
 
         <div class="checkpoint">
         <div>
-            <h2>fjdhfkjdhsjfhdj</h2>
-            <p>jdsfhskudhfdsjhfkjhfjs
-                fhsdjfhjkdshfkjhdsfkhdfh
-                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
-                fsdjfhskhfsdjfkldj
+            <h2>1044-1287</h2>
+            <p>Bagn was the first kingdom of Myanmar with over 10,000 Buddhist temples built.
             </p>
         </div>
     </div>
 
         <div class="checkpoint">
         <div>
-            <h2>fjdhfkjdhsjfhdj</h2>
-            <p>jdsfhskudhfdsjhfkjhfjs
-                fhsdjfhjkdshfkjhdsfkhdfh
-                dfjhsdfkjhdsjfhjsdhfjhdfjskdhf
-                fsdjfhskhfsdjfkldj
+            <h2>1287 </h2>
+            <p> The Mongol invasion led to Bagan’s downfall and it remained a religious center. 
             </p>
         </div>
     </div>
