--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
              <div class="navdiv" data-aos="fade-down" data-aos-duration="3000">
                 <div class="logo"><a href="index.html"><h1>VOYAGE</h1></a></div>
                 <div class="navlinks">
-                <ul>
+                <ul class="sidebar">
                     <li><a href="aboutpage.html">About</a></li>
                     <li><a href="historypage.html">History</a></li>
                     <li><a href="culturepage.html">Culture</a></li>
