--- a/historypage.html
+++ b/historypage.html
@@ -23,6 +23,7 @@
             background-size: cover;
             background-position: center;
             position: relative;
+            overflow-x: hidden;
         }
 
         </style>
@@ -139,12 +140,13 @@
     <h2 class="geography-title">GEOGRAPHY</h2>
     <div class="geography-content">
         <div class="map-container">
-            <img src="imagesfile/burma-84ac04-1024.jpg" alt="Map of Myanmar">
+            <img src="imagesfile/MapofBagan.jpg" alt="Map of Myanmar">
         </div>
         <div class="geography-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt tellus ac nisi posuere, eget dapibus lacus blandit.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquet lorem et ligula vestibulum, sed dictum odio aliquam.</p>
-        </div>
+            <p>Bangan was the first capital of the Burmese empire. King Anawrahta implemented the Bagan dynasty. He is the first King to introduce the Buddhist religion in Myanmar.</p>
+            <p>The Bagan Dynasty is also known as the Pagan Dynasty. The Burmese culture, language, ethnicity, territory and architecture started to be shaped in Bagan and the architecture led to the evolution of the identity of the community.</p>
+            <p>Bagan is located in an area where there are many strong earthquakes ( 7- 8.5 Richter scale). The Bagan dynasty was founded under King Anawrahta in the middle of the 11th century. The kingdom is located in Old Bagan. Old Bagan is located on the banks of the Ayeyarwady River.</p>
+          </div>
     </div>
 </section>
 
