--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             background-position: center;
             position: relative;
             padding-top: 100px;
+            overflow-x: hidden;
+
 
             mask-image: linear-gradient(black,transparent);
             -webkit-mask-image: linear-gradient(black 68%,transparent 100%);
