--- a/templepage.html
+++ b/templepage.html
@@ -24,6 +24,7 @@
             background-size: cover;
             background-position: center;
             position: relative;
+            overflow-x: hidden;
 
             mask-image: linear-gradient(black,transparent);
             -webkit-mask-image: linear-gradient(black 68%,transparent 100%);
@@ -122,7 +123,7 @@
         <footer data-aos="fade-up" data-aos-duration="3000">
             <div class="footer-overlay">
 
-<!-- footer content -->
+              <!-- footer content -->
 <footer data-aos="fade-up" data-aos-duration="3000">
   <div class="footer-overlay">
 
@@ -159,11 +160,6 @@
         </uL>
     </div>
 </div>
-    <!-- <div class="social-icons" id="social-icons">
-        <i class="fa-brands fa-x-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-solid fa-envelope"></i>
-    </div> -->
 
     <div id="SocialIcons">
 
@@ -237,6 +233,30 @@
     darkmode = localStorage.getItem('darkmode')
     darkmode !== "active" ? enableDarkmode() : disableDarkmode()
   })
+  </script>
+
+    <script>
+    const lightbox = document.createElement('div')
+    lightbox.id = 'lightbox'
+    document.body.appendChild(lightbox)
+
+    const images = document.querySelectorAll('img')
+    images.forEach(image => {
+        image.addEventListener('click', e=>{
+            lightbox.classList.add('active')
+            const img = document.createElement('img')
+            img.src = image.src
+            while (lightbox.firstChild){
+                lightbox.removeChild(lightbox.firstChild)
+            }
+            lightbox.appendChild(img)
+        })
+    })
+
+    lightbox.addEventListener('click', e =>{
+        if (e.target !== e.currentTarget) return
+        lightbox.classList.remove('active')
+    })
   </script>
 
 
