--- a/travelpage.html
+++ b/travelpage.html
@@ -23,6 +23,7 @@
             background-size: cover;
             background-position: center;
             position: relative;
+            overflow-x: hidden;
 
             mask-image: linear-gradient(black,transparent);
             -webkit-mask-image: linear-gradient(black 68%,transparent 100%);
