Added the Hamburger nav bar for small screen on temple page and added full context on cultural page.
Added the Hamburger nav bar for small screen on temple page and added full context on cultural page.

degugged some errors

--- a/culturepage.html
+++ b/culturepage.html
@@ -132,15 +132,22 @@
     <iframe width="100%" height="400" src="https://www.youtube.com/embed/00Ofa_-yK8k?si=NTVr6owl56FrhzW6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <p class="video-credit">Bagan Period Dance on Youtube by Sai Zayar</p>
   </div>
-  <p> Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-            Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-            Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit </p>
+  <p> The traditional cultural dances of Bagan are based on Bagan dynasty and are an 
+    significant role in Myanmar's heritage. These perfomances are held during festivals, ceremonies, special 
+  celebrations to showcase graceful movements, unique custom and music inspired by Buddhist legends and folklore.
+  This is Bagan Period Dance, which tells stories from ancient times through symbolic hand gestures and elegant choreography. 
+  Dancers wear beautifully embroidered costumes and ornate headdresses, reflecting the style of the royal courts back in the days.
+  <br> 
+  <br>
+  Nowadays, cultural dance performances can still be enjoyed at the festivals and cultural shows around Bagan. This offers
+   visitors an insight to the traditions that have been preserved for centuries.
+
+ </p>
  </section>
 
  <!-- Another Cultural Section -->
   <section class="culture-gallery-section">
-  <h2 class="cultural-page-title">HEADING</h2>
+  <h2 class="cultural-page-title"> Cultural Practices & Etiquette</h2>
   <p class="cultural-subtitle">Lorem ipsum dolor sit amet. Vel veniam earum</p>
 
   <div class="cultural-gallery">
@@ -153,15 +160,61 @@
       <p class="image-credit">DESCRIPTION OF IMAGE</p>
     </div>
     <div class="cultural-card">
-      <img src="imagesfile/monk.jpg" alt="Festival Image">
+      <img src="imagesfile/Pickled_tea_(lahpet).jpg" alt="Festival Image">
       <p class="image-credit">DESCRIPTION OF IMAGE</p>
     </div>
   </div>
 
-   <p> Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+<div class="cultural-p-e">
+    <div class="etiquette-item">
+      <h3>Take off your shoes before entering temples</h3>
+      <p>
+It is believed that the foot is the most impure part of the body.
+ Burmese people and tourists will have remove shoes at the place of temple entry.
+  The same goes for entering Burmese homes if you are invited, you should leave your shoes at the door.
+   You should never point your toes towards a Buddha statue or at someone or anything. 
+      </p>
+    </div>
+
+    <div class="etiquette-item">
+      <h3>Public Displays of Affection</h3>
+      <p>
+        In order to honour Burmese culture, couples should refrain from publicly displaying their affection.
+         Avoid kissing on the street or in a restaurant to avoid startling or upsetting the locals.
+      </p>
+    </div>
+
+    <div class="etiquette-item">
+      <h3>Dress code</h3>
+      <p>We advise all visitors to respect Burma's culture by dressing appropriately.
+         Wearing a Burmese longyi—a piece of cloth that encircles your waist—is preferable, 
+         mainly when visiting monasteries or temples.
+      </p>
+    </div>
+
+      <div class="etiquette-item">
+    <h3>Thanaka – Traditional Face Cosmetic</h3>
+    <p>
+      Thanaka is a yellowish-white cosmetic paste made from grounded bark of thanaka tree( its botanical name Limonia acidissima). It is widely worn by
+      Burmese women, men, and children on the face and arms. Thanaka serves as a natural sunscreen,
+      provides a cooling effect, and is part of Myanmar's cultural identity.
+    </p>
+  </div>
+
+  <div class="etiquette-item">
+    <h3>Tea Leaf Salad – Lahpet Thoke</h3>
+    <p>
+      Tea Leaf Salad, Lahpet Thoke in Burmese, is a famous Burmese dish made with fermented tea leaves,
+      peanuts, sesame seeds, garlic, lime, and other crunchy toppings. It is considered a symbol of
+      hospitality and is traditionally served when guests arrive.
+    </p>
+  </div>
+
+  </div>
+   <!-- <p> Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
             Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
             Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit am ut mollitia placeat...</p>
+            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit am ut mollitia placeat...</p> -->
 </section>
 
 <!-- footer content -->
