--- a/travelpage.html
+++ b/travelpage.html
@@ -38,16 +38,26 @@
 <!-- Navigation bar -->
              <div class="navdiv" data-aos="fade-down" data-aos-duration="3000">
                 <div class="logo"><a href="index.html"><h1>VOYAGE</h1></a></div>
-                <div class="navlinks">
-                <ul>
+                
+                 <nav>
+                <ul class="sidebar">
+                  <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                     <li><a href="aboutpage.html">About</a></li>
                     <li><a href="historypage.html">History</a></li>
                     <li><a href="culturepage.html">Culture</a></li>
                     <li><a href="templepage.html">Temple</a></li>
                     <li><a href="travelpage.html">Travel</a></li>
                 </ul>
+                <ul>
+                    <li class="hideOnMobile"><a href="aboutpage.html">About</a></li>
+                    <li class="hideOnMobile"><a href="historypage.html">History</a></li>
+                    <li class="hideOnMobile"><a href="culturepage.html">Culture</a></li>
+                    <li class="hideOnMobile"><a href="templepage.html">Temple</a></li>
+                    <li class="hideOnMobile"><a href="travelpage.html">Travel</a></li>
+                    <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+                </ul>
 
-            </div>
+              </nav>
 
 
 <!-- Dark/Light Mode Toggle -->
@@ -277,5 +287,13 @@
     }
   });
 </script>
+<script>
+  function showSidebar() {
+    document.querySelector('.sidebar').style.display = 'flex';
+  }
+  function hideSidebar() {
+    document.querySelector('.sidebar').style.display = 'none';
+  }
+  </script>
     </body>
 </html>
