--- a/historypage.html
+++ b/historypage.html
@@ -66,7 +66,7 @@
 
             </div>
 
-
+<div class="header">
             <div class="titlecontent">
             <h1 data-aos="fade-up" data-aos-duration="3000">HISTORY OF BAGAN</h1>
         </div>
@@ -150,6 +150,10 @@
     <div class="geography-content">
         <div class="map-container">
             <img src="imagesfile/MapofBagan.jpg" alt="Map of Myanmar">
+            <p class="image-credit">Map of Myanmar<br>
+      <span class="credit">By Hybernator - Own work,CC BY-SA 3.0, <a href="https://commons.wikimedia.org/w/index.php?curid=107657138">On Wikimedia Commons</a></span>
+     
+    </p>
         </div>
         <div class="geography-description">
             <p>Bangan was the first capital of the Burmese empire. King Anawrahta implemented the Bagan dynasty. He is the first King to introduce the Buddhist religion in Myanmar.</p>
@@ -243,11 +247,11 @@ An early, significant Buddhist empire's level of religious commitment is reflect
         </div>
       </div>
 
-        <div class="icons emailIcon">
-        <p class="iconName">Email</p>
-        <div class="icon email">
-          <a href="mailto:pch22008@my.hghs.school.nz"></a>
-          <i class="fa-solid fa-envelope"></i>
+        <div class="icons youtubeIcon">
+        <p class="iconName">Youtube</p>
+        <div class="icon youtube">
+          <a href="https://www.youtube.com/@draw.3r" target="_blank"></a>
+          <i class="fa-brands fa-youtube"></i>
         </div>
       </div>
 
