adding images on temple and travel page
Adding the context related images to the temple and travel page

--- a/historypage.html
+++ b/historypage.html
@@ -24,6 +24,8 @@
             background-position: center;
             position: relative;
             overflow-x: hidden;
+                        mask-image: linear-gradient(black,transparent);
+            -webkit-mask-image: linear-gradient(black 68%,transparent 100%);
         }
 
         </style>
