--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                 <li class="card-item swiper-slide">
           <a href="travelpage.html" class="card-link">
-            <img src="imagesfile/transport.jpg" alt="Card Image" class="card-image">
+            <img src="imagesfile/Cow_Cart_Myanmar.jpg" alt="Card Image" class="card-image">
             <p class="badge travel">Travel</p>
             <h2 class="card-title">Travelling around Bagan</h2>
               <button class="card-button material-symbols-outlined">arrow_forward</button>
