--- a/templepage.html
+++ b/templepage.html
@@ -86,7 +86,7 @@
 <!-- Header -->
         <div class="header">
             <div class="titlecontent">
-            <h1 data-aos="fade-up" data-aos-duration="3000">DISCOVER BAGAN</h1>
+            <h1 data-aos="fade-up" data-aos-duration="3000">Sacred Wonders</h1>
         </div>
 
         </div>
@@ -101,8 +101,8 @@
     <!-- Temple Main Gallery -->
     <div class="temple-gallery">
         <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 1">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 2">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 3">
+        <img src="imagesfile/Ananda_Temple_-_Bagan,_Myanmar_20130209-18.jpg" alt="Thatbyinnyu Temple View 2">
+        <img src="imagesfile/19_Bagan_(179a)_Thatbynnyu_tempelj_(4).jpg" alt="Thatbyinnyu Temple View 3">
     </div>
 
     <p>“The temples in Bagan were primarily constructed using fired bricks and mud-based mortars with vegetal binders; some structures of temples are also incorporating sandstone for reinforcement.”
@@ -124,8 +124,8 @@
 
     <div class="temple-gallery">
         <img src="imagesfile/Ananda_temple_interior.jpg" alt="Thatbyinnyu Temple View 1">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 2">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 3">
+        <img src="imagesfile/Ananda_Temple_Bagan_4.jpg" alt="Thatbyinnyu Temple View 2">
+        <img src="imagesfile/20160801_Ananda_Temple_Bagan_Myanmar_6687.jpg" alt="Thatbyinnyu Temple View 3">
     </div>
 
     <p>Gu-style (hollow temples) have a vaulted indoor chamber and point arches. his technique of vaulting is thought to have been developed in Bagan in the 11th century.
@@ -143,9 +143,9 @@
     <p class="subheading">Lorem ipsum dolor sit amet. Vel veniam earum</p>
 
     <div class="temple-gallery">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 1">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 2">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 3">
+        <img src="imagesfile/Lawkananda_Pagoda,_Sittwe.jpg" alt="Thatbyinnyu Temple View 1">
+        <img src="imagesfile/Shwezigon.jpg" alt="Thatbyinnyu Temple View 2">
+        <img src="imagesfile/Bupaya-Bagan-Myanmar-04-gje.jpg" alt="Thatbyinnyu Temple View 3">
     </div>
 
     <p>Stupa-style (Solid temples) are bell-shaped with one or more rectangular terraces at the base. They contain a relic chamber. 
