--- a/culturepage.html
+++ b/culturepage.html
@@ -69,7 +69,7 @@
 <!-- Header -->
         <div class="header">
             <div class="titlecontent">
-            <h1 data-aos="fade-up" data-aos-duration="3000">DISCOVER BAGAN</h1>
+            <h1 data-aos="fade-up" data-aos-duration="3000">Customs & Community</h1>
         </div>
 
         </div>
