Adding context on Travel page
Added context on travel page and i need   still add credits for images

--- a/templepage.html
+++ b/templepage.html
@@ -99,11 +99,22 @@
     <p class="subheading">Lorem ipsum dolor sit amet. Vel veniam earum</p>
 
     <!-- Temple Main Gallery -->
-    <div class="temple-gallery">
-        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 1">
-        <img src="imagesfile/Ananda_Temple_-_Bagan,_Myanmar_20130209-18.jpg" alt="Thatbyinnyu Temple View 2">
-        <img src="imagesfile/19_Bagan_(179a)_Thatbynnyu_tempelj_(4).jpg" alt="Thatbyinnyu Temple View 3">
-    </div>
+<div class="temple-gallery">
+  <div class="temple-card">
+    <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 1">
+    <p class="image-credit">Thatbyinnyu Temple with Trees</p>
+  </div>
+
+  <div class="temple-card">
+    <img src="imagesfile/Ananda_Temple_-_Bagan,_Myanmar_20130209-18.jpg" alt="Thatbyinnyu Temple View 2">
+    <p class="image-credit">Ananda Temple in Bagan</p>
+  </div>
+
+  <div class="temple-card">
+    <img src="imagesfile/19_Bagan_(179a)_Thatbynnyu_tempelj_(4).jpg" alt="Thatbyinnyu Temple View 3">
+    <p class="image-credit">Thatbyinnyu Temple View</p>
+  </div>
+</div>
 
     <p>“The temples in Bagan were primarily constructed using fired bricks and mud-based mortars with vegetal binders; some structures of temples are also incorporating sandstone for reinforcement.”
         Golden temples are built using a combination of materials, with the use of gold leaf, diamonds, and rubies to cover brick and copper structures.
@@ -122,11 +133,22 @@
     <h2>HEADING</h2>
     <p class="subheading">Gu-style (hollow temples)</p>
 
-    <div class="temple-gallery">
-        <img src="imagesfile/Ananda_temple_interior.jpg" alt="Thatbyinnyu Temple View 1">
-        <img src="imagesfile/Ananda_Temple_Bagan_4.jpg" alt="Thatbyinnyu Temple View 2">
-        <img src="imagesfile/20160801_Ananda_Temple_Bagan_Myanmar_6687.jpg" alt="Thatbyinnyu Temple View 3">
-    </div>
+<div class="temple-gallery">
+  <div class="temple-card">
+    <img src="imagesfile/Ananda_temple_interior.jpg" alt="Ananda Temple Interior">
+    <p class="image-credit">Ananda Temple Interior</p>
+  </div>
+
+  <div class="temple-card">
+    <img src="imagesfile/Ananda_Temple_Bagan_4.jpg" alt="Ananda Temple Exterior">
+    <p class="image-credit">Ananda Temple Exterior</p>
+  </div>
+
+  <div class="temple-card">
+    <img src="imagesfile/20160801_Ananda_Temple_Bagan_Myanmar_6687.jpg" alt="Ananda Temple View">
+    <p class="image-credit">Ananda Temple View</p>
+  </div>
+</div>
 
     <p>Gu-style (hollow temples) have a vaulted indoor chamber and point arches. his technique of vaulting is thought to have been developed in Bagan in the 11th century.
         The vaulting technique is the use of brick vaulting and point arches, which were developed in Bagan in the 11th century. It was an innovative structure at that period of time however, it was lost in the later eras. 
@@ -142,11 +164,22 @@
     <h2>HEADING</h2>
     <p class="subheading">Lorem ipsum dolor sit amet. Vel veniam earum</p>
 
-    <div class="temple-gallery">
-        <img src="imagesfile/Lawkananda_Pagoda,_Sittwe.jpg" alt="Thatbyinnyu Temple View 1">
-        <img src="imagesfile/Shwezigon.jpg" alt="Thatbyinnyu Temple View 2">
-        <img src="imagesfile/Bupaya-Bagan-Myanmar-04-gje.jpg" alt="Thatbyinnyu Temple View 3">
-    </div>
+<div class="temple-gallery">
+  <div class="temple-card">
+    <img src="imagesfile/Lawkananda_Pagoda,_Sittwe.jpg" alt="Lawkananda Pagoda">
+    <p class="image-credit">Lawkananda Pagoda</p>
+  </div>
+
+  <div class="temple-card">
+    <img src="imagesfile/Shwezigon.jpg" alt="Shwezigon Pagoda">
+    <p class="image-credit">Shwezigon Pagoda</p>
+  </div>
+
+  <div class="temple-card">
+    <img src="imagesfile/Bupaya-Bagan-Myanmar-04-gje.jpg" alt="Bupaya Pagoda">
+    <p class="image-credit">Bupaya Pagoda</p>
+  </div>
+</div>
 
     <p>Stupa-style (Solid temples) are bell-shaped with one or more rectangular terraces at the base. They contain a relic chamber. 
     Stupa-style(solid temples) are non-enterable structures which contain relics and sacred objects.
