--- a/culturepage.html
+++ b/culturepage.html
@@ -83,9 +83,9 @@
 
   <div class="festival-gallery">
   <div class="festival-card">
-    <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
-    <p class="image-credit">My Description of the Image <br>
-      <span class="credit">By Aung Myint Htwe - Own work, CC BY-SA 4.0, <a href="https://commons.wikimedia.org/w/index.php?curid=72920218">On Wikimedia Commons</a></span>
+    <img src="imagesfile/Lighting_Festival.jpg" alt="Rows of candles are lit to celebrate the Thadingyut Lighting Festival, marking the end of Buddhist Lent.">
+    <p class="image-credit">Rows of candles are lit to celebrate the Thadingyut Lighting Festival, marking the end of Buddhist Lent <br>
+      <span class="credit">By Aung Myint Htwe - Own work <a href="https://commons.wikimedia.org/w/index.php?curid=72920218">On Wikimedia Commons</a></span>
     </p>
     <h3>Lighting Festival</h3>
     <p>The Lighting Festival is called Thadingyut in Burmese. 
@@ -99,9 +99,9 @@
 
 
   <div class="festival-card">
-    <img src="imagesfile/monk.jpg" alt="LightingFestival">
-    <p class="image-credit">My Description of the Image <br>
-      <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
+    <img src="imagesfile/monk.jpg" alt="Monks and novices line up to receive alms during the annual Shwezigon Pagoda Festival">
+    <p class="image-credit">Monks and novices line up to receive alms during the annual Shwezigon Pagoda Festival<br>
+      <span class="credit">By Dan Lundberg - Own work <a href="https://www.flickr.com/photos/9508280@N07/">On Flickr</a></span>
     </p>
     <h3>SHWEZIGON FESTIVAL</h3>
     <p>The Shwezigon Festival is a yearly festival celebrated on the full moon day of Tazaungmone (in November).
@@ -116,9 +116,9 @@
   </div>
 
   <div class="festival-card">
-    <img src="imagesfile/Rakhine_Thingyan_2011.jpeg" alt="LightingFestival">
-    <p class="image-credit">My Description of the Image <br>
-      <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
+    <img src="imagesfile/Rakhine_Thingyan_2011.jpeg" alt="Locals celebrate the Burmese New Year by sprinkling water on each other">
+    <p class="image-credit">Locals celebrate the Burmese New Year by sprinkling water on each other<br>
+      <span class="credit">By Htoo Tay Zar  - Own work <a href="https://commons.wikimedia.org/w/index.php?curid=19503095">On Wikimedia Commons</a></span>
     </p>
     <h3>WATER FESTIVAL</h3>
     <p>The Water Festival, also known as Thingyan, is a 4–5 day celebration of the Burmese New Year.
@@ -157,20 +157,26 @@
  <!-- Another Cultural Section -->
   <section class="culture-gallery-section">
   <h2 class="cultural-page-title"> Cultural Practices & Etiquette</h2>
-  <p class="cultural-subtitle">Lorem ipsum dolor sit amet. Vel veniam earum</p>
+  <p class="cultural-subtitle">Discover the traditions and customs that shape daily life in Bagan.</p>
 
   <div class="cultural-gallery">
     <div class="cultural-card">
-      <img src="imagesfile/myanmar-4123323_1280.jpg" alt="Festival Image">
-      <p class="image-credit">DESCRIPTION OF IMAGE</p>
+      <img src="imagesfile/myanmar-4123323_1280.jpg" alt="Woman with Thanaka">
+      <p class="image-credit">Woman with Thanaka<br>
+      <span class="credit">By Qamera - Own work <a href="https://pixabay.com/photos/myanmar-temple-pagoda-burma-4123323/">On Pixabay</a></span>
+    </p>
     </div>
     <div class="cultural-card">
-      <img src="imagesfile/Taking_off_shoes.jpg" alt="Festival Image">
-      <p class="image-credit">DESCRIPTION OF IMAGE</p>
+      <img src="imagesfile/Taking_off_shoes.jpg" alt="Remove Shoes Sign At The Entry Of Temple">
+      <p class="image-credit">Remove Shoes Sign At The Entry Of Temple<br>
+      <span class="credit">By Wally Gobetz - Own work <a href="https://www.flickr.com/photos/wallyg/4757205464">On Flickr</a></span>
+    </p>
     </div>
     <div class="cultural-card">
-      <img src="imagesfile/Pickled_tea_(lahpet).jpg" alt="Festival Image">
-      <p class="image-credit">DESCRIPTION OF IMAGE</p>
+      <img src="imagesfile/Pickled_tea_(lahpet).jpg" alt=" Ingredients for Myanmar’s famous Tea Leaf Salad (Lahpet Thoke), a traditional cultural dish.">
+      <p class="image-credit"> Ingredients for Myanmar’s famous Tea Leaf Salad (Lahpet Thoke)<br>
+      <span class="credit">By Wagaung at the English Wikipedia - Own work <a href="https://commons.wikimedia.org/wiki/File:Pickled_tea_(lahpet).JPG">On Wikimedia Commons</a></span>
+    </p>
     </div>
   </div>
 
@@ -364,6 +370,30 @@ It is believed that the foot is the most impure part of the body.
   function hideSidebar() {
     document.querySelector('.sidebar').style.display = 'none';
   }
+  </script>
+
+  <script>
+    const lightbox = document.createElement('div')
+    lightbox.id = 'lightbox'
+    document.body.appendChild(lightbox)
+
+    const images = document.querySelectorAll('img')
+    images.forEach(image => {
+        image.addEventListener('click', e=>{
+            lightbox.classList.add('active')
+            const img = document.createElement('img')
+            img.src = image.src
+            while (lightbox.firstChild){
+                lightbox.removeChild(lightbox.firstChild)
+            }
+            lightbox.appendChild(img)
+        })
+    })
+
+    lightbox.addEventListener('click', e =>{
+        if (e.target !== e.currentTarget) return
+        lightbox.classList.remove('active')
+    })
   </script>
     </body>
 </html>
