Adding credits on Travel page finished

--- a/travelpage.html
+++ b/travelpage.html
@@ -88,17 +88,20 @@
 <div class="travel-gallery">
   <div class="travel-card">
     <img src="imagesfile/Cow_Cart_Myanmar.jpg" alt="Cow Cart in Bagan">
-    <p class="image-credit">Traditional Cow Cart</p>
+    <p class="image-credit">Traditional Cow Cart<br>
+      <span class="credit">By Philip Nalangan - Own work <a href="https://commons.wikimedia.org/wiki/User:PhilipNalangan">On Wikimedia Commons</a></span></p>
   </div>
 
   <div class="travel-card">
     <img src="imagesfile/Horse_Carriage_Bagan.jpg" alt="Horse Carriage in Bagan">
-    <p class="image-credit">Horse Carriage Ride</p>
+    <p class="image-credit">Horse Carriage Ride<br>
+      <span class="credit">By Philip Nalangan - Own work <a href="https://commons.wikimedia.org/wiki/User:PhilipNalangan">On Wikimedia Commons</a></span></p>
   </div>
 
   <div class="travel-card">
     <img src="imagesfile/Bagan-Ballonfahrt-170-Ballon-gje.jpg" alt="Hot Air Balloon in Bagan">
-    <p class="image-credit">Hot Air Balloon Ride</p>
+    <p class="image-credit">Hot Air Balloon Ride<br>
+      <span class="credit">By Gerd Eichmann - Own work <a href="https://commons.wikimedia.org/wiki/User:Gerd_Eichmann">On Wikimedia Commons</a></span></p>
   </div>
 </div>
       
@@ -133,19 +136,21 @@
       <div class="travel-gallery">
 <div class="travel-card">
     <img src="imagesfile/Sunrise_at_Bagan,_Myanmar.jpg" alt="Sunrise at Bagan">
-    <p class="image-credit">Sunrise at Bagan</p>
+    <p class="image-credit">Sunrise at Bagan<br>
+      <span class="credit">By Anne Dirkse - Own work <a href="https://commons.wikimedia.org/wiki/User:Dirkse">On Wikimedia Commons</a></span></p>
   </div>
 
   <div class="travel-card">
     <img src="imagesfile/Bagan_Sunset.jpg" alt="Bagan Sunset">
     <p class="image-credit">Bagan Sunset<br>
-      <span class="credit">By Philip Nalangan - Own work <a href="https://commons.wikimedia.org/wiki/User:PhilipNalangan">On Wikimedia Commons</a></span>
-    </p></p>
+      <span class="credit">By Gordon Johnstone - Own work <a href="https://commons.wikimedia.org/wiki/File:Bagan_Sunset.jpg">On Wikimedia Commons</a></span>
+    </p>
   </div>
 
   <div class="travel-card">
     <img src="imagesfile/Ballon_over_Bagan.jpg" alt="Hot Air Balloon over Bagan">
-    <p class="image-credit">Hot Air Balloon over Bagan</p>
+    <p class="image-credit">Hot Air Balloon over Bagan<br>
+      <span class="credit">By Tore Sætre - Own work <a href="https://commons.wikimedia.org/wiki/User:Toresetre">On Wikimedia Commons</a></span></p>
   </div>
   </div>
       
